# tiny-cli

./: .gitignore  Cargo.toml  README.md
.planning/: tiny-clean.md
_bmad/: config.toml  config.user.toml
_bmad-output/: project-context.md
_bmad-output/brainstorming/: brainstorming-session-2026-05-07-190913.md
_bmad-output/planning-artifacts/: architecture.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/plans/: 2026-05-04-tiny-clean-advanced-handoff.md  2026-05-04-tiny-clean-advanced.md
docs/specs/: 2026-05-04-tiny-clean-advanced.md
src/: cli.rs  main.rs  util.rs
src/commands/: clean.rs  focus.rs  mod.rs  scan.rs  sys.rs  uninstall.rs
src/commands/clean/: cli_validate.rs  discover.rs  execute.rs  fs_safe.rs  mod.rs  picker.rs  picker_drill.rs  process.rs  report.rs  runner.rs  types.rs
src/commands/clean/providers/: android_sdk.rs  app_orphans.rs  browser_caches.rs  chat_caches.rs  crash_reports.rs  dev_caches.rs  docker.rs  downloads_old.rs  font_quicklook_caches.rs  go_cache.rs  gradle_maven.rs  ios_simulators.rs  jetbrains.rs  mail_attachments.rs  mod.rs  node_modules.rs  python_caches.rs  quarantine.rs  rust_targets.rs  screenshots_old.rs  streaming_caches.rs  time_machine_local.rs  trash.rs  user_caches.rs  user_logs.rs  vscode.rs  xcode.rs
src/commands/scan/: duplicates.rs  extensions.rs  ignore.rs  mod.rs  report_json.rs  report_text.rs  sort.rs  types.rs  walker.rs
tests/: clean_smoke.rs
