[package]
name = "tiny-cli"
version = "0.1.0"
edition = "2021"
description = "A small, practical Rust CLI for performance and productivity utilities"
license = "MIT"
authors = ["mxrsv"]
repository = "https://github.com/mxrsv/tiny-cli"
homepage = "https://github.com/mxrsv/tiny-cli"
readme = "README.md"
keywords = ["cli", "productivity", "system", "focus", "utility"]
categories = ["command-line-utilities"]

[[bin]]
name = "tiny"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.32"
dialoguer = "0.11"
